2019-1/230/users/4050/executions/1867_3207.log
== TEST (2019-07-01 16:18:47) 
-- CODE:
from numpy import *
from linalg import *
turmas = int(input("Quantidade de turmas: "))
qtdAlunos = int(input("Quantidade de alunos: "))

turma = zeros((qtdTurmas, qtdAlunos), dtpe = int)
for i in range(0, qtTurmas):
	turma[i,:] = input("Digite o numero de matricula").split(',')

totalAlunos = qtdAlunos * qtdTurmas

print(turma)
print(totalAlunos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 16:18:47) 
-- CODE:
from numpy import *
from linalg import *
turmas = int(input("Quantidade de turmas: "))
qtdAlunos = int(input("Quantidade de alunos: "))

turma = zeros((qtdTurmas, qtdAlunos), dtpe = int)
for i in range(0, qtTurmas):
	turma[i,:] = input("Digite o numero de matricula").split(',')

totalAlunos = qtdAlunos * qtdTurmas

print(turma)
print(totalAlunos)
-- EXECUTION TIME:
1.1938
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1867/3207/main.py", line 2, in <module>
    from linalg import *
ImportError: No module named 'linalg'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:19:08) 
-- CODE:
from numpy import *
from lin.alg import *
turmas = int(input("Quantidade de turmas: "))
qtdAlunos = int(input("Quantidade de alunos: "))

turma = zeros((qtdTurmas, qtdAlunos), dtpe = int)
for i in range(0, qtTurmas):
	turma[i,:] = input("Digite o numero de matricula").split(',')

totalAlunos = qtdAlunos * qtdTurmas

print(turma)
print(totalAlunos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:19:34) 
-- CODE:
from numpy import *

turmas = int(input("Quantidade de turmas: "))
qtdAlunos = int(input("Quantidade de alunos: "))

turma = zeros((qtdTurmas, qtdAlunos), dtpe = int)
for i in range(0, qtTurmas):
	turma[i,:] = input("Digite o numero de matricula").split(',')

totalAlunos = qtdAlunos * qtdTurmas

print(turma)
print(totalAlunos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:19:58) 
-- CODE:
from numpy import *

qtdTurmas = int(input("Quantidade de turmas: "))
qtdAlunos = int(input("Quantidade de alunos: "))

turma = zeros((qtdTurmas, qtdAlunos), dtpe = int)
for i in range(0, qtTurmas):
	turma[i,:] = input("Digite o numero de matricula").split(',')

totalAlunos = qtdAlunos * qtdTurmas

print(turma)
print(totalAlunos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:24:06) 
-- CODE:
from numpy import *

qtdTurmas = int(input("Quantidade de turmas: "))
qtdAlunos = int(input("Quantidade de alunos: "))


for i in range(0, qtTurmas):
	turma[i,:] = input("Digite o numero de matricula").split(',')

totalAlunos = qtdAlunos * qtdTurmas

print(turma)
print(totalAlunos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:24:27) 
-- CODE:
from numpy import *

qtdTurmas = int(input("Quantidade de turmas: "))
qtdAlunos = int(input("Quantidade de alunos: "))

turma = zeros((qtdTurmas, qtdAlunos), dtpe = int)
for i in range(0, qtdTurmas):
	turma[i,:] = input("Digite o numero de matricula").split(',')

totalAlunos = qtdAlunos * qtdTurmas

print(turma)
print(totalAlunos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:24:41) 
-- CODE:
from numpy import *

qtdTurmas = int(input("Quantidade de turmas: "))
qtdAlunos = int(input("Quantidade de alunos: "))


for i in range(0, qtdTurmas):
	turma[i,:] = input("Digite o numero de matricula").split(',')

totalAlunos = qtdAlunos * qtdTurmas

print(turma)
print(totalAlunos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:25:17) 
-- CODE:
from numpy import *

qtdTurmas = int(input("Quantidade de turmas: "))
qtdAlunos = int(input("Quantidade de alunos: "))


for i in range(0, qtdTurmas):
	turma[i,:] = input("Digite o numero de matricula: ").split(',')

totalAlunos = qtdAlunos * qtdTurmas

print(turma)
print(totalAlunos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:26:18) 
-- CODE:
from numpy import *

qtdTurmas = int(input("Quantidade de turmas: "))
qtdAlunos = int(input("Quantidade de alunos: "))

turma = ((qtdTurma, qtdAlunos), dtype = int)
for i in range(0, qtdTurmas):
	turma[i,:] = input("Digite o numero de matricula: ").split(',')

totalAlunos = qtdAlunos * qtdTurmas

print(turma)
print(totalAlunos)
-- ERROR:
File "XXXX", line 6
    turma = ((qtdTurma, qtdAlunos), dtype = int)
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:26:37) 
-- CODE:
from numpy import *

qtdTurmas = int(input("Quantidade de turmas: "))
qtdAlunos = int(input("Quantidade de alunos: "))

turma = zeros((qtdTurma, qtdAlunos), dtype = int)
for i in range(0, qtdTurmas):
	turma[i,:] = input("Digite o numero de matricula: ").split(',')

totalAlunos = qtdAlunos * qtdTurmas

print(turma)
print(totalAlunos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 16:26:53) 
-- CODE:
from numpy import *

qtdTurmas = int(input("Quantidade de turmas: "))
qtdAlunos = int(input("Quantidade de alunos: "))

turma = zeros((qtdTurmas, qtdAlunos), dtype = int)
for i in range(0, qtdTurmas):
	turma[i,:] = input("Digite o numero de matricula: ").split(',')

totalAlunos = qtdAlunos * qtdTurmas

print(turma)
print(totalAlunos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 16:27:36) 
-- CODE:
from numpy import *

qtdTurmas = int(input("Quantidade de turmas: "))
qtdAlunos = int(input("Quantidade de alunos: "))

turma = zeros((qtdTurmas, qtdAlunos), dtype = int)
for i in range(0, qtdTurmas):
	turma[i,:] = input("Digite o numero de matricula: ").split(',')

totalAlunos = qtdAlunos * qtdTurmas

print(turma)
print(totalAlunos)
-- EXECUTION TIME:
0.880112
-- TEST CASE 1:
---- input:
3
5
101,102,103,104,105
201,202,203,204,205
301,302,303,304,305
---- correct output:
[[101 102 103 104 105]
 [201 202 203 204 205]
 [301 302 303 304 305]]
15
---- user output:
[[101 102 103 104 105]
 [201 202 203 204 205]
 [301 302 303 304 305]]
15
-- TEST CASE 2:
---- input:
4
4
101,103,105,107
102,104,106,108
201,203,205,207
202,204,206,208
---- correct output:
[[101 103 105 107]
 [102 104 106 108]
 [201 203 205 207]
 [202 204 206 208]]
16
---- user output:
[[101 103 105 107]
 [102 104 106 108]
 [201 203 205 207]
 [202 204 206 208]]
16
-- TEST CASE 3:
---- input:
3
3
111,112,113
222,223,224
333,334,335
---- correct output:
[[111 112 113]
 [222 223 224]
 [333 334 335]]
9
---- user output:
[[111 112 113]
 [222 223 224]
 [333 334 335]]
9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
